  functions on win32 (#2401)

- mapowscommon.c: fix namespace leak issues (#2375)

- mapogcsos.c: add SWE DataBlock support (#2248)

- mapogcsos.c: fix build warnings, namespace and schema pointers (#2248)

- mappdf.c: support output in fastcgi case via msIO_fwrite() (#2406)

- mapogcsos.c: Initial support for POST requests (#2379) and updated msSOSDispatch() handling


Version 5.0.0 (2007-09-17)
--------------------------

- AGG: Fix angle computation for truetype marker symbols on lines (#2316) 

- Fix support for bilinear resampling of raster data with AGG (#2303)


Version 5.0.0-rc2 (2007-09-10)
------------------------------

- Prevent seg fault in msWMSLoadGetMapParams when request is missing (#2299)

- Fixed calculation of scale in PHP MapScript mapObj.zoomScale() (#2300)

- Fixed conflict between runtime substitution validation and qstring 
  validation.

- Fixed agg configure logic (now should work with --with-agg alone) (#2295)

- Fixed interleaving of multi-band results for raster query (#2294).


Version 5.0.0-rc1 (2007-09-05)
------------------------------

- Fixed "MinFeatureSize AUTO" labeling for polygon layers, works for polygon
  annotation layers too (#2232)

- Fixed path following labels with short (2/3 character) strings (#2223)

- AGG fix a bug when rendering polygons with tiled pixmaps

- Added requirement to provide validation pattern for cgi-based attribute
  queries using the layer metadata key 'qstring_validation_pattern' (#2286)

- Fixed msDebug causing a crash with VS2005 (#2287)

- Added stronger checks on libpdf version in configure script (#2278)

- Added msGetVersionInt() to MapScript (ms_GetVersionInt() in PHP) (#2279)

- _isnan prototype for MSVC builds from <float.h> #2277

- AGG: Fix a bug when rendering brushed lines with vector or pixmap symbols
  (artifacts could appear on outline)
  
- AGG: Adjust symbol height when brushing a line with a vector symbol so that
  the line width isn't truncated
