@@ -105,6 +105,9 @@ Current Version (5.1-dev, SVN trunk):
 
 - mapogcsos.c: Initial support for POST requests (#2379) and updated msSOSDispatch() handling
 
+- mapogr.cpp: Use pooling api to ensure per-thread sharing of connections 
+  only (#2408)
+
 
 Version 5.0.0 (2007-09-17)
 --------------------------
